--- a/bmerketo/static/contact.html
+++ b/bmerketo/static/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/41c8b474e2.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="css/style.min.css" rel="stylesheet">
@@ -12,11 +13,11 @@
     
     <header>
         <div class="container">          
-            <div class="logo"><img src="images/logo.svg" alt=""></div>
+            <div class="logo"><img src="images/logo.svg" alt="">bmerketo</div>
             <nav id="menu" class="menu-links">
-                <a class="link" href="#">HOME</a>
-                <a class="link" href="#">PRODUCTS</a>
-                <a class="link" href="#">CONTACT</a>
+                <a class="link" href="home.html">HOME</a>
+                <a class="link" href="products.html">PRODUCTS</a>
+                <a class="link" href="contact.html">CONTACT</a>
             </nav>
             <nav class="menu-icons">
                 <a class="link" href="#"><i class="fa-regular fa-search"></i></a>
@@ -47,30 +48,35 @@
         <div class="container">
             <div class="title">Write something</div>
             
-            <form>
+            <form novalidate>
                 <div class="name form-group">
-                    <label for="">Your Name*</label>
-                    <input id="name" type="text">
+                    <label for="name">Your Name*</label>
+                    <input id="name" type="text" class="invalid" required>
+                    <span class="error">Your name is required</span>
                 </div>
                 <div class="email form-group">
-                    <label for="">Your Email*</label>
-                    <input id="email" type="text">
+                    <label for="email">Your Email*</label>
+                    <input id="email" type="text" class="invalid">
+                    <span class="error">Your email is required</span>
                 </div>
-                <div class="phone form-group">
-                    <label for="">Phone Number (optional)</label>
+                <div class="phoneNumber form-group">
+                    <label for="phone">Phone Number (optional)</label>
                     <input id="phone" type="text">
                 </div>
-                <div class="company form-group">
-                    <label for="">Company (optional)</label>
+                <div class="companyName form-group">
+                    <label for="company">Company (optional)</label>
                     <input id="company" type="text">
                 </div>
                 <div class="message form-group">
-                    <label for="">Message*</label>
-                    <textarea id="message"></textarea>
+                    <label for="message">Message*</label>
+                    <textarea id="message" class="invalid"></textarea>
+                    <span class="error">Message is required</span>
                 </div>
-                <div class="checkbox form-checkbox-group">
-                    <input id="check" type="checkbox">
-                    <label for="">Save my name, email ini the this browser for the next time I comment.</label>
+                <div class="terms form-checkbox-group">
+                    <label class="custom-checkbox">Save my name, email in the this browser for the next time I comment.
+                        <input type="checkbox" checked="checked">
+                        <span class="checkmark"></span>
+                    </label>
                 </div>
                 <button class="btn-theme">Submit</button>
             </form>
