--- a/bmerketo/static/home.html
+++ b/bmerketo/static/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/41c8b474e2.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link href="css/style.min.css" rel="stylesheet">
@@ -12,11 +13,11 @@
     
     <header>
         <div class="container">          
-            <div class="logo"><img src="images/logo.svg" alt=""></div>
+            <div class="logo"><img src="images/logo.svg" alt="">bmerketo</div>
             <nav id="menu" class="menu-links">
-                <a class="link" href="#">HOME</a>
-                <a class="link" href="#">PRODUCTS</a>
-                <a class="link" href="#">CONTACT</a>
+                <a class="link" href="home.html">HOME</a>
+                <a class="link" href="products.html">PRODUCTS</a>
+                <a class="link" href="contact.html">CONTACT</a>
             </nav>
             <nav class="menu-icons">
                 <a class="link" href="#"><i class="fa-regular fa-search"></i></a>
@@ -167,43 +168,47 @@
     <section class="up-to-sell">
         <div class="container">
             <div class="collection-grid">
-                <!-- collection-item start -->
-                <a href="#" class="collection-item">
-                    <img src="images/placeholders/369x310.svg" alt="">
-                    <div class="body">
-                        <div class="title">Apple watch collection</div>
-                        <div class="info"> 
-                            <div class="price">$30.00</div>
-                            <i class="add-cart fa-regular fa-cart-plus"></i>
-                        </div>                       
-                    </div>
-                </a>
-                <!-- collection-item end -->
-
-                <!-- collection-item start -->
-                <div class="collection-item collection-content">
-                    <div class="container">
-                        <div class="title-red">UP TO SELL</div>
-                        <div class="title">50% OFF</div>
-                        <div class="ingress">Get the Best Price</div>
-                        <div class="text">Get the best daily offer et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren no sea taki</div>
-                        <a href="#" class="link">Discover More</a>
-                    </div>
+                <div class="item-1">
+                    <!-- collection-item start -->
+                    <a href="#" class="collection-item">
+                        <img src="images/placeholders/369x310.svg" alt="">
+                        <div class="body">
+                            <div class="title">Apple watch collection</div>
+                            <div class="info"> 
+                                <div class="price">$30.00</div>
+                                <i class="add-cart fa-regular fa-cart-plus"></i>
+                            </div>                       
+                        </div>
+                    </a>
+                    <!-- collection-item end -->
                 </div>
-                <!-- collection-item end -->
-
-                <!-- collection-item start -->
-                <a href="#" class="collection-item">
-                    <img src="images/placeholders/369x310.svg" alt="">
-                    <div class="body">
-                        <div class="title">Apple watch collection</div>
-                        <div class="info"> 
-                            <div class="price">$30.00</div>
-                            <i class="add-cart fa-regular fa-cart-plus"></i>
-                        </div>                       
+                <div class="discover">
+                    <!-- collection-content start -->
+                    <div class="collection-content">
+                        <div class="container">
+                            <div class="title-red">UP TO SELL</div>
+                            <div class="title">50% OFF</div>
+                            <div class="ingress">Get the Best Price</div>
+                            <div class="text">Get the best daily offer et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren no sea taki</div>
+                            <a href="#" class="link">Discover More</a>
+                        </div>
                     </div>
-                </a>
-                <!-- collection-item end -->
+                    <!-- collection-content end -->
+                </div>
+                <div class="item-2">
+                    <!-- collection-item start -->
+                    <a href="#" class="collection-item">
+                        <img src="images/placeholders/369x310.svg" alt="">
+                        <div class="body">
+                            <div class="title">Apple watch collection</div>
+                            <div class="info"> 
+                                <div class="price">$30.00</div>
+                                <i class="add-cart fa-regular fa-cart-plus"></i>
+                            </div>                       
+                        </div>
+                    </a>
+                    <!-- collection-item end -->
+                </div>
             </div>
         </div>
     </section>
@@ -308,8 +313,8 @@
     <section class="newsletter">
         <div class="container">
             <form>
-                <input type="text" placeholder="Enter your mail here" maxlength="64">
-                <button class="btn-theme btn-rounded">SUBSCRIBE FOR NEWSLETTER</button>
+                <input type="text" placeholder="subscribe mail here..." maxlength="64">
+                <button class="btn-theme btn-rounded"><i class="fa-sharp fa-solid fa-paper-plane fa-beat"></i></button>
             </form>
         </div>
     </section>
@@ -320,6 +325,7 @@
         </div>
     </footer>
 
+    <script src="https://kit.fontawesome.com/41c8b474e2.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
